# SysAnalyzer

./: OAT.xml  README.md  README_zh.md  bundle.json
ide/: build.js  package.json
ide/server/: smarperfServer.py
ide/src/: index.html
ide/src/base-ui/checkbox/: LitCheckBox.ts
ide/src/command/: CmdConstant.ts
ide/src/doc/: compile_trace_streamer.html  des_tables.html  quickstart_Application_operation_skills.html  quickstart_ability_monitor.html  quickstart_animation.html  quickstart_app_startup.html  quickstart_arkts.html  quickstart_hilog.html  quickstart_hiperf.html  quickstart_memory_template.html  quickstart_taskpool.html
ide/src/hdc/: HdcDeviceManager.ts
ide/src/trace/: SpApplication.ts
ide/test/command/: Cmd.test.ts
ide/test/hdc/: HdcDeviceManager.test.ts
ide/test/js-heap/: HeapDataInterface.test.ts
ide/test/log/: Log.test.ts
ide/test/trace/: SpApplication.test.ts
patches/: productdefine_common.patch
trace_streamer/: build.sh  build_operator.sh  format-code.sh  pare_third_party.sh
trace_streamer/doc/: compiler_ut.md  des_binder.md  des_stat.md  des_support_event.md  des_tables.md  des_wakeup.md  frames.md
trace_streamer/prebuilts/patch_hiperf/: 1_pengjingtong.diff  2_perf_dump_report_0913.patch  BUILD.gn
trace_streamer/sdk/demo_sdk/: BUILD.gn  ts.gni  version.h
trace_streamer/sdk/demo_sdk/doc/: TraceStreamerSDK.md
trace_streamer/sdk/demo_sdk/plugin/: BUILD.gn  sdk_plugin_data_parser.cpp  sdk_plugin_data_parser.h
trace_streamer/sdk/demo_sdk/protos/: BUILD.gn  protogen.sh
trace_streamer/sdk/demo_sdk/protos/types/plugins/mock_data/: BUILD.gn  mock_plugin_config.proto  mock_plugin_result.proto
trace_streamer/sdk/demo_sdk/rpc/: http_server.cpp  http_server.h  http_socket.h  rpc_server.cpp  rpc_server.h
trace_streamer/sdk/demo_sdk/sdk/: sdk_data_parser.cpp  sdk_data_parser.h  ts_sdk_api.cpp  ts_sdk_api.h  wasm_func.cpp
trace_streamer/sdk/demo_sdk/table/: gpu_counter_object_table.cpp  gpu_counter_table.cpp  gpu_counter_table.h  meta_table.cpp  slice_object_table.cpp  slice_table.cpp  slice_table.h  table_base.cpp
trace_streamer/sdk/demo_sdk/test/: BUILD.gn
trace_streamer/sdk/demo_sdk/trace_data/: trace_data_cache_reader.cpp  trace_data_cache_writer.cpp  trace_data_db.h  trace_stdtype.cpp  trace_stdtype.h
trace_streamer/sdk/demo_sdk/trace_streamer/: trace_streamer_selector.cpp  trace_streamer_selector.h
trace_streamer/sdk/dubai_sdk/: BUILD.gn  main.cpp  version.cpp
trace_streamer/src/: BUILD.gn  main.cpp  version.cpp
trace_streamer/src/base/: BUILD.gn  filter_constraints.cpp  filter_constraints.h  htrace_file_header.h  index_map.h  log.h  string_help.cpp  string_help.h  ts_common.h
trace_streamer/src/cfg/: trace_streamer_config.cpp  trace_streamer_config.h
trace_streamer/src/filter/: BUILD.gn  animation_filter.cpp  animation_filter.h  app_start_filter.cpp  app_start_filter.h  cpu_filter.cpp  cpu_filter.h  frame_filter.cpp  frame_filter.h  native_hook_filter.cpp  native_hook_filter.h  perf_data_filter.cpp  perf_data_filter.h  task_pool_filter.cpp
trace_streamer/src/metrics/: BUILD.gn  memAggStrategy.h  memStrategy.h  metaDataStrategy.h  metrics.cpp  metrics.h  sysCallStrategy.h  traceStateStrategy.h  traceTaskStrategy.h
trace_streamer/src/parser/: BUILD.gn  common_types.h  perf_script_parser.cpp  perf_script_parser.h  print_event_parser.cpp  print_event_parser.h  thread_state_flag.cpp  thread_state_flag.h
trace_streamer/src/parser/rawtrace_parser/: BUILD.gn  cpu_detail_parser.cpp  cpu_detail_parser.h  ftrace_event_processor.cpp  ftrace_event_processor.h  ftrace_field_processor.cpp  ftrace_field_processor.h  ftrace_processor.cpp  ftrace_processor.h  kernel_symbols_processor.cpp  kernel_symbols_processor.h  printk_formats_processor.cpp  printk_formats_processor.h  rawtrace_parser.cpp  rawtrace_parser.h
trace_streamer/src/proto_reader/: proto_reader.cpp
trace_streamer/src/rpc/: http_server.cpp  http_server.h  rpc_server.cpp  rpc_server.h  wasm_func.cpp
trace_streamer/src/table/: BUILD.gn
trace_streamer/src/trace_data/: BUILD.gn  trace_data_cache.cpp  trace_data_cache.h  trace_data_cache_base.h  trace_data_cache_reader.cpp  trace_data_cache_reader.h  trace_data_cache_writer.cpp  trace_data_cache_writer.h  trace_data_db.cpp  trace_data_db.h  trace_stdtype.cpp  trace_stdtype.h
trace_streamer/src/trace_streamer/: trace_streamer_selector.cpp  trace_streamer_selector.h
trace_streamer/test/: BUILD.gn  press_test.sh  test_ts.gni
trace_streamer/test/resource/: query_multi_file.sql  query_multi_file_no_space.sql  query_single_file.sql  query_single_file_no_space.sql  rawtrace.data  ut_bytrace_input_full.txt  ut_bytrace_input_thread.txt
trace_streamer/test/test_fuzzer/: README.md
trace_streamer/test/test_fuzzer/bytrace_fuzzer/: BUILD.gn  bytrace_fuzzer.cpp  bytrace_fuzzer.h
trace_streamer/test/test_fuzzer/htrace_fuzzer/: BUILD.gn  htrace_fuzzer.cpp  htrace_fuzzer.h
trace_streamer/test/test_fuzzer/selector_fuzzer/: BUILD.gn  selector_fuzzer.cpp  selector_fuzzer.h
trace_streamer/test/unittest/: README.md  animation_filter_test.cpp  app_start_filter_test.cpp  binder_filter_test.cpp  bio_parser_test.cpp  bytrace_parser_test.cpp  clock_filter_test.cpp  cpu_filter_test.cpp  ebpf_file_system_test.cpp  ebpf_parser_test.cpp  event_parser_test.cpp  filter_filter_test.cpp  frame_filter_test.cpp  hidump_parser_test.cpp  hilog_parser_test.cpp  hisys_event_parser_test.cpp  htrace_binder_event_test.cpp  htrace_cpu_data_parser_test.cpp  htrace_cpu_detail_parser_test.cpp  htrace_diskio_parser_test.cpp  htrace_event_parser_test.cpp  htrace_irq_event_test.cpp  htrace_mem_parser_test.cpp  htrace_network_parser_test.cpp  htrace_process_parser_test.cpp  htrace_sys_mem_parser_test.cpp  htrace_sys_vmem_parser_test.cpp  http_server_test.cpp  irq_filter_test.cpp  js_cpu_profiler_test.cpp  js_memory_test.cpp  measure_filter_test.cpp  native_hook_parser_test.cpp  paged_memory_parser_test.cpp  parser_pbreader_test.cpp  perf_script_parser_test.cpp  process_filter_test.cpp  proto_reader_test.cpp  query_file_test.cpp  query_metrics_test.cpp  (+8 more)
(+741 files in other folders)
