# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
OHOS_PROTO_DIR = ""
kernel_version = "."
THIRD_PARTY = "//third_party"
PREBUILTS = "//prebuilts"
if (target_os == "linux" || target_os == "windows" || target_os == "macx") {
  if (is_test) {
    enable_ts_utest = true
  }
} else {
  use_wasm = false
  enable_ts_utest = true
}
