# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../build/ts.gni")
OHOS_PROTO_GEN = "${THIRD_PARTY}/protogen"
ohos_source_set("sdk_plugin") {
  subsystem_name = "trace_streamer"
  part_name = "sdk_sdk_plugin"
  sources = [
    "sdk_plugin_data_parser.cpp",
    "sdk_plugin_data_parser.h",
  ]
  include_dirs = [
    "..",
    "../include",
    "../trace_data",
    "${SRC}/base",
    "${THIRD_PARTY}/sqlite/include",
    "${OHOS_PROTO_GEN}/types/plugins/mock_data",
    "${THIRD_PARTY}/protobuf/src",
  ]

  public_deps = [ "../protos/types/plugins/mock_data:mock_data_cpp" ]
}
